--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-slider": "^2.0.6",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -66,6 +67,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-slider": "^1.3.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
